--- a/certificates.html
+++ b/certificates.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="./estilos/style.css">
 </head>
 <body>
-    <header class="cabecalho">
+<header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="./index.html">Home</a>
-            <a class="cabecalho__menu__link" href="./about.html">Sobre Mim</a>
+            <a class="cabecalho__menu__link" href="./about.html">Sobre</a>
             <a class="cabecalho__menu__link" href="./certificates.html">Certificados</a>
             <a class="cabecalho__menu__link" href="./experiences.html">Experiências</a>
         </nav>
 </header>
         <main class="apresentacao">
         <section class="apresentacao__conteudo">  
-        <h2 class="apresentacao__conteudo__titulo">Estudos e Graduação</h2>
+        <h1 class="apresentacao__conteudo__titulo">Estudos e Graduação</h1>
         <div class="apresentacao__conteudo__texto">
         <ul class="apresentacao__conteudo__texto">
-            <li>Graduação - Análise e Desenvolvimento de Sistemas - <a href="linkdocertificado"> Conclusão 07/2025</a></li></ul><br>
+            <li>Graduação - Análise e Desenvolvimento de Sistemas - <a href="linkdocertificado">Conclusão 07/2025</a></li></ul><br>
             <li>Graduação Comércio Esterior - Universidade Cruzeiro do Sul - <a href="./pdf/Rosana Comercio Exterior.pdf"> Certificado</a> </li><br>
-            <li>HTML e CSS_ praticando HTML_CSS - Alura - <a href="./pdf/Rosana de Souza Santana - Curso HTML e CSS_ praticando HTML_CSS - Alura.pdf"> Certificado</a></li><br>
+            <li>HTML e CSS_ praticando HTML_CSS - Alura - <a href="./pdf/Rosana de Souza Santana - Curso HTML e CSS_ praticando HTML_CSS - Alura.pdf">Certificado</a></li><br>
             <li>HTML5 e CSS3 parte 1_ crie uma página da Web - Alura - <a href="./pdf/Rosana de Souza Santana - Curso HTML5 e CSS3 parte 1_ crie uma página da Web - Alura.pdf"> Certificado</a></li><br>
             <li>HTML5 e CSS3 parte 2_ posicionamento, listas e navegação - Alura - <a href="./pdf/Rosana de Souza Santana - Curso HTML5 e CSS3 parte 2_ posicionamento, listas e navegação - Alura.pdf"> Certificado</a></li><br>
             <li>HTML5 e CSS3 parte 3_ trabalhando com formulários e tabelas - Alura - <a href="./pdf/Rosana de Souza Santana - Curso HTML5 e CSS3 parte 3_ trabalhando com formulários e tabelas - Alura.pdf"> Certificado</a></li><br>
@@ -36,7 +36,7 @@
     <img src="./assets/Rosana-vestido azul.jpg" alt="Foto Rosana Santana" class="apresentacao__imagem_logotipo">
 </main> 
 <footer class="apresentacao__rodape">
-        <p>Desenvolvido por Rosana Santana</p>
+    <p><strong>Desenvolvido por Rosana Santana</strong></p>
         <p>Contatos: 11 975103987 Email: ro_grunge@hotmail.com</p>
 </footer>
 </body>
