--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="./index.html">Home</a>
-            <a class="cabecalho__menu__link" href="./about.html">Sobre Mim</a>
+            <a class="cabecalho__menu__link" href="./about.html">Sobre</a>
             <a class="cabecalho__menu__link" href="./certificates.html">Certificados</a>
             <a class="cabecalho__menu__link" href="./experiences.html">Experiências</a>
         </nav>
@@ -22,7 +22,7 @@
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro 
                 nível <strong class="titulo__destaque"> com um Front-end de qualidade!</strong></h1>  
             <p class="apresentacao__conteudo__texto">Olá! Sou Rosana Santana, desenvolvedora Front-end 
-                com especialidade em<strong> React, HTML e CSS</strong>. Ajudo pequenos negócios e 
+                com especialidade em<strong class="titulo__destaque"> React, HTML e CSS</strong>. Ajudo pequenos negócios e 
                 designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <div class="apresentacao__links">
             <h2 class="apresentacao__links__subtitulo">
@@ -40,7 +40,7 @@
         <img src="./assets/Rosana-vestido azul.jpg" alt="Foto Rosana Santana" class="apresentacao__imagem_logotipo">
     </main>
     <footer class="apresentacao__rodape">
-        <p>Desenvolvido por Rosana Santana</p>
+        <p><strong>Desenvolvido por Rosana Santana</strong></p>
         <p>Contatos: 11 975103987 Email: ro_grunge@hotmail.com</p>
     </footer>
 </body>
