--- a/experiences.html
+++ b/experiences.html
@@ -11,25 +11,43 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="./index.html">Home</a>
-            <a class="cabecalho__menu__link" href="./certificates.html">Sobre Mim</a>
+            <a class="cabecalho__menu__link" href="./certificates.html">Sobre</a>
             <a class="cabecalho__menu__link" href="./certificates.html">Certificados</a>
             <a class="cabecalho__menu__link" href="./experiences.html">Experiências</a>
         </nav>
     </header>
-    <main>  <section class="apresentacao__conteudo">
-        <h1 class="apresentacao__conteudo__titulo">Currículo</h1>
-        <p class="apresentacao__conteudo__texto">
-            Apresentação e informações principais
-        </p>
-        <h2 class="apresentacao__conteudo__titulo">Experiências</h2>
-        <p class="apresentacao__conteudo__texto">
+
+        <main class="apresentacao">  
+        <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">Experiências</h1>
+        <div class="apresentacao__conteudo__texto">
         <ul class="apresentacao__conteudo__texto">
-            <li> Empresa tal (2020 - 2021) - fazia isso e aquilo </li>
-            <li> Empresa tal (2021 - 2023) - fazia isso e aquilo </li>
+            <li><strong class="titulo__destaque"> TecBan (2021 - 2023)</strong> - fazia isso e aquilo  - Atendimento a operadores de campo, nível Brasil, agendamento de chamados técnicos e operacionais,
+                 atendimento técnico nível II (resolução de problemas e liberação de equipamentos remoto) </li><br>
+
+            <li><strong class="titulo__destaque"> Keego (2021 - 2023)</strong> - Principais responsabilidades: Setor de compras e faciliteis, emissão de pedidos, cotação de produtos
+                e serviços, criação de novos fornecedores, análise de fornecedores, atendimento a colaboradores,
+                sistema Totvs, escrituração de notas fiscais, controle e solicitação de fretes, controle de contratos
+                para emissão de pedidos em sistema Totvs, controle de correio, pagamentos em geral, emissão de
+                passagens, cadastro de funcionários para estacionamento e compras esporádicas. </li><br>
+
+            <li> <strong class="titulo__destaque">Andritz Hydro (2018 - 2020)</strong> - Principais responsabilidades: Experiência na área fiscal e comercial, atendimento ao cliente,
+                escrituração de notas, inclusão de notas sem retenção em sistema SAP, Concur Solutions, arquivo,
+                organização de livro fiscal, solicitação de reservas de hotéis e viagens. </li><br>
+
+            <li> <strong class="titulo__destaque">Banco Bradesco (2013 - 2016)</strong> - Atendimento ao cliente, solicitações diversas (agência bancária), abertura de
+                contas, venda de produtos de investimento e vida tais como: planos de saúde, odontológicos, planos
+                de seguro residenciais, seguros de veículo, seguros de vida, pagamento de contas, prospecção de
+                nova carteira de clientes, abastecimento de máquinas de saque, conferência de valores diários,
+                malotes.
+                 </li><br>
         </ul>
-    </main>
+        </div>
+    </section>
+        <img src="./assets/Rosana-vestido azul.jpg" alt="Foto Rosana Santana" class="apresentacao__imagem_logotipo">
+</main>
     <footer class="apresentacao__rodape">
-        <p>Desenvolvido por Rosana Santana</p>
+        <p><strong>Desenvolvido por Rosana Santana</strong></p>
         <p>Contatos: 11 975103987 Email: ro_grunge@hotmail.com</p>
     </footer> 
 </body>
